--- a/style/style.css
+++ b/style/style.css
@@ -37,9 +37,8 @@ body {
 .feature-section{
     display: block;
     width: 70%;
- 
     margin: 30px auto;
-    height: 100vh;
+    height: 80vh;
 }
 .feature-info{
     display: block;
@@ -53,7 +52,7 @@ body {
     display: block;
     text-align: center;
     width: 464px;
-    height: 450px;
+    height: 400px;
     margin: 0 10px;
     border-radius: 300px 300px 0px 0px;
     background: rgba(167, 33, 98, 0.15);
@@ -62,7 +61,7 @@ body {
     display: block;
     text-align: center;
     width: 464px;
-    height: 450px;
+    height: 400px;
     margin: 0 10px;
     border-radius: 300px 300px 0px 0px;
     background: rgba(5, 151, 160, 0.15);
@@ -72,7 +71,7 @@ body {
     display: block;
     text-align: center;
     width: 464px;
-    height: 450px;
+    height: 400px;
     margin: 0 10px;
     border-radius: 300px 300px 0px 0px;
     background: rgba(71, 125, 17, 0.15);
@@ -81,15 +80,16 @@ body {
 .fature-pic{
     margin-top: 100px;
     width: 300px;
-    height: 350px;
+    height: 300px;
 }
+/* start service section */
 .service{
     display: flex;
+    width: 70%;
     justify-content: space-around;
+    margin: 0 auto;
     align-items: center;
-    margin-top: 150px;
     background-color: rgb(218, 234, 248);
-    padding: 20px;
 
 }
 .our-service{
@@ -105,3 +105,14 @@ body {
     text-align: center;
 }
 /* Hot Deal Section */
+.hot-deal{
+    display: flex;
+    height: 50vh;
+
+}
+.deal{
+
+}
+.off-color{
+    color: red;
+}
